--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="charishmap333@gmail.com"><i class="bi bi-envelope-fill" target="_blank"></i></a>
-        <a href="https://www.linkedin.com/in/charishmap333/" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href=""><i class="bi bi-github" target="_blank"></i></a>
-        <a href="https://medium.com/@cparuchuri_18" target="_blank"><i class="bi-journal-text"></i></a>
+        <a href="mailto:cparuchuri11@gmail.com" target="_blank"><i class="bi bi-envelope-fill"></i></a>
+        <a href="https://www.linkedin.com/in/charishmap11/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Charishma-paruchuri" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
+        <a href="https://leetcode.com/u/charishmap/" target="_blank"><i class="bi bi-code-slash"></i></a>
       </div>
 
     </div>
@@ -76,8 +76,8 @@
       <img src="assets/img/abc.png" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Charishma Paruchuri</h2>
-        <p>I'M A SENIOR SOFTWARE DEVELOPER</p>
+        <h2>Charishma</h2>
+        <p>I'M A SOFTWARE DEVELOPER</p>
         <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
       </div>
 
@@ -97,7 +97,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/IMG_902.JPG" class="img-fluid" alt="" height="50px">
+            <img src="assets/img/img.png" class="img-fluid" alt="" height="50px">
           </div>
           <div class="col-lg-8 content">
             <!-- <h2>UI/UX Designer &amp; Web Developer.</h2> -->
@@ -108,15 +108,15 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Charishma Paruchuri</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Profile:</strong> <span>Senior Software Developer</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (323) 393-3849</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>charishmap333@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Charishma P</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Profile:</strong> <span>Software Developer</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 (602)-704-9181</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>cparuchuri11@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3" style="text-align: justify; padding: 1rem 0;">
-              A Senior Software Developer with 7+ years of experience creating scalable and user-focused applications. I specialize in Java, JavaScript, React.js, Spring Boot, and cloud platforms like AWS and Azure. My work spans industries like healthcare, finance, and retail, delivering impactful solutions through robust backends and intuitive UIs.
+              Software Developer around 5 years of experience delivering clean, scalable, and cloud-first solutions across industries. I build intuitive UIs with React and Angular, architect resilient APIs with Spring Boot, and deploy to AWS and Azure with CI/CD pipelines. Passionate about system design and clean architecture — I stay sharp by solving complex challenges on LeetCode and collaborating on modern tech stacks.
               <br/>
               <br/>
               When I’m not coding, I enjoy traveling, mentoring, and exploring new tech trends.
@@ -133,7 +133,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Muy Resume</span>
+        <span class="description-title">My Resume</span>
         <h2>My Resume</h2>
         <p>Building modern, efficient, and user-friendly applications</p>
       </div><!-- End Section Title -->
@@ -145,55 +145,64 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Software Developer</h4>
-              <h5>2022 – Present </h5>
-              <p><em>The Home Depot, Atlanta, GA</em></p>
-              <ul>
-                <li>Delivered a high-performing customer order tracking system by optimizing microservices and real-time data rendering.</li>
-                <li>Developed user-centric UIs with React.js, ensuring mobile compatibility and cross-device responsiveness. </li>
-                <li>Secured APIs with OAuth2 and JWT, enhancing authentication and safeguarding data.</li>
-                <li>Automated CI/CD pipelines with Jenkins, Docker, and Kubernetes for streamlined deployments.</li>
-              </ul>
+              <h4>Full Stack Developer </h4>
+              <h5><em>EOG Resources, Houston, Texas</em></h5>
+              <p><em>Jul 2024 - Current</em></p>
+              <!-- <ul> -->
+                <!-- <li>Designed and built modern, performant UIs using React.js, Next.js, and Tailwind CSS with SSR and code-splitting.</li>
+                <li>Developed and deployed scalable microservices using Spring Boot and Node.js, integrating REST and GraphQL APIs.</li>
+                <li>Enabled real-time features with Kafka, WebSockets, Redis; ensured security with JWT, Spring Security; deployed to AWS.</li>
+                <li>Automated CI/CD with Jenkins, containerized using Docker and Kubernetes; implemented testing and monitoring with JUnit, SonarQube, and ELK.</li>
+                <li>Collaborated in Agile teams using Jira and Git, ensuring rapid delivery and continuous improvement through sprint-based development.</li> -->
+              <!-- </ul> -->
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Software Developer</h4>
-              <h5>2021 – 2022</h5>
-              <p><em>BMO Harris Bank, Chicago, IL </em></p>
-              <ul>
-                <li>Enhanced CRM platforms with Angular, introducing advanced analytics and seamless real-time updates via WebSocket.</li>
-                <li>Migrated APIs to GraphQL, enabling efficient data retrieval tailored to frontend needs.</li>
-                <li>Optimized database performance with PostgreSQL indexing and query tuning for high-traffic environments.</li>
-                <li>Deployed and monitored cloud-native applications on Azure, ensuring high availability and fault tolerance.</li>
-              </ul>
+              <h5><em>Ranial Systems, Somerset, NJ</em></h5>
+              <p><em>Nov 2023 - May 2024</em></p>
+              <!-- <ul> -->
+                <!-- <li>Built responsive, WCAG-compliant UI components using Angular, TypeScript, and NgRx.</li>
+                <li>Developed Spring Boot microservices with async workflows using RabbitMQ and secured them with JWT & Azure Key Vault.</li>
+                <li>Deployed on Azure AKS with CI/CD via Azure DevOps; monitored performance using Splunk and Log4j.</li>
+                <li>Integrated SSO with SAML, OAuth2, OIDC; documented APIs with Swagger and tested using Postman, Cypress, and Jest.</li> -->
+              <!-- </ul> -->
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5><em>Cleanese, Irving, TX</em></h5>
+              <p><em>Mar 2023 – Oct 2023</em></p>
+              <!-- <ul>
+                <li>Built interactive SPAs using React.js, TypeScript, and Redux with enhanced UX through optimized routing.</li>
+                <li>Developed RESTful services using Spring Boot and Node.js; integrated messaging with ActiveMQ/JMS.</li>
+                <li>Deployed microservices via AWS CloudFormation and PCF; managed pipelines with Azure DevOps.</li>
+              </ul> -->
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title invisible">Professional Experience</h3>
+
             <div class="resume-item">
-              <h4>Software Developer</h4>
-              <h5> 2018 – 2021</h5>
-              <p><em>Baxter Healthcare, Deerfield, IL </em></p>
-              <ul>
-                <li>Developed secure patient portals with Angular and Node.js, improving user accessibility and performance.</li>
-                <li>Implemented event-driven microservices with Kafka, ensuring real-time updates for healthcare workflows. </li>
-                <li>Leveraged Redis for caching and AWS RDS for database hosting, boosting system reliability.</li>
-                <li>Automated testing processes with Mocha, Chai, and Postman, delivering bug-free releases.</li>
-              </ul>
+              <h4>Software Engineer</h4>
+              <h5><em>Engati Technologies, Banglore, India</em></h5>
+              <p><em>Jan 2022 - Dec 2022</em></p>
+              <!-- <ul>
+                <li>Built responsive dashboards and eCommerce features using React.js, Redux, integrating APIs via Axios.</li>
+                <li>Developed scalable Spring Boot services with Kafka, Cassandra, and gRPC; deployed to AWS and automated delivery with Jenkins in an Agile environment.</li>
+              </ul> -->
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Software Developer</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>iPrism Technologies, Hyderabad, India</em></p>
-              <ul>
-                <li>Built AI-driven chatbot interfaces and responsive admin panels using React.js and Redux Toolkit.</li>
-                <li>Designed GraphQL APIs and Spring Batch jobs to manage dynamic data pipelines.</li>
-                <li>Enhanced order and shipment workflows with RabbitMQ for asynchronous messaging.</li>
-                <li>Deployed and monitored services on AWS, leveraging Docker and Kubernetes for scalability.</li>
-              </ul>
+              <h4>Software Development Engineer</h4>
+              <h5><em>Swiggy, Banglore, India</em></h5>
+              <p><em>Apr 2020 - Dec 2021</em></p>
+              <!-- <ul>
+                <li>Developed interactive SPAs using Angular, RxJS, and Chart.js; integrated REST APIs and implemented reactive forms with custom validation.</li>
+                <li>Built Spring Boot backend services with RabbitMQ, deployed on Azure App Services, and managed CI/CD with Azure DevOps in Agile sprints.</li>
+              </ul> -->
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -203,12 +212,8 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>MASTERS IN COMPUTER SCIENCE</h4>
-              <p><em>State University Of New York, Binghamton</em></p>
-            </div>
-
-            <div class="resume-item">
-              <h4>BACHELOR OF TECHNOLOGY IN COMPUTER SCIENCE</h4>
-              <p><em>SRM University</em></p>
+              <h5><em>State University Of New York, Binghamton, NY</em></h5>
+              <p><em>Jan 2023 - May 2024</em></p>
             </div>
 
           </div>
@@ -334,7 +339,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
               <h3>Call Me</h3>
-              <p>+1 (323)-393-3849</p>
+              <p>+1 (602)-704-9181</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -342,7 +347,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center  info-item-borders">
               <i class="bi bi-envelope"></i>
               <h3>Email Me</h3>
-              <p>charishmap333@gmail.com</p>
+              <p>cparuchuri11@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -393,12 +398,12 @@
 
   <footer id="footer" class="footer position-relative dark-background">
     <div class="container">
-      <h3 class="sitename">Charishma Paruchuri<br></h3>
+      <h3 class="sitename">CP<br></h3>
       <p cclass="fw-bold">Code. Create. Collaborate.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/charishmap333/" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href=""><i class="bi bi-github" target="_blank"></i></a>
-        <a href="https://medium.com/@cparuchuri_18" target="_blank"><i class="bi-journal-text"></i></a>
+        <a href="https://www.linkedin.com/in/charishmap11/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Charishma-paruchuri" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
+        <a href="https://leetcode.com/u/charishmap/" target="_blank"><i class="bi bi-code-slash"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
