--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#cp" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#services">Skills</a></li>
@@ -71,7 +71,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="cp" class="hero section dark-background">
 
       <img src="assets/img/abc.png" alt="" data-aos="fade-in">
 
