--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="header-social-links">
         <a href="mailto:cparuchuri11@gmail.com" target="_blank"><i class="bi bi-envelope-fill"></i></a>
         <a href="https://www.linkedin.com/in/charishmap11/" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/Charishma-paruchuri" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
+        <a href="https://github.com/devwithcp" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
         <a href="https://leetcode.com/u/charishmap/" target="_blank"><i class="bi bi-code-slash"></i></a>
       </div>
 
@@ -402,7 +402,7 @@
       <p cclass="fw-bold">Code. Create. Collaborate.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/charishmap11/" target="_blank"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/Charishma-paruchuri" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
+        <a href="https://github.com/devwithcp" target="_blank"><i class="bi bi-github" target="_blank"></i></a>
         <a href="https://leetcode.com/u/charishmap/" target="_blank"><i class="bi bi-code-slash"></i></a>
       </div>
       <div class="container">
