--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full Stack Developer </h4>
+              <h4>Software Engineer</h4>
               <h5><em>EOG Resources, Houston, Texas</em></h5>
               <p><em>Jul 2024 - Current</em></p>
               <!-- <ul> -->
